# VibeCut_Studio

./: .env.example  .gitignore  FEATURES.md  README.md  eslint.config.mjs  index.html  next.config.ts  package-lock.json  package.json  tsconfig.json  vite.config.ts
.claude/: launch.json
scripts/: run-sidecar.sh
sidecar/: README.md  audio_engine.py  requirements.txt  server.py
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: ai.rs  commands.rs  db.rs  main.rs  models.rs  state.rs
src-tauri/src/application/: events.rs  mod.rs  workflows.rs
src-tauri/src/domain/: jobs.rs
src-tauri/src/infrastructure/: mod.rs  providers.rs  runtime.rs
src-tauri/src/tauri_commands/: jobs.rs  mod.rs  mutations.rs  queries.rs
src/app/: globals.css  layout.tsx
src/app/editor/: EditorShell.tsx
src/app/providers/: AppProviders.tsx
src/components/: AssetGenPanel.tsx  CommandInput.tsx  DesktopEditor.tsx  Editor.tsx  ExportButton.tsx  ImageGenPanel.tsx  MediaBin.tsx  TextEditorBar.tsx  Timeline.tsx  TranscriptPanel.tsx  VibeFontPanel.tsx  VibeTransitionPanel.tsx  VideoMergePanel.tsx  VideoPlayer.tsx  VideoUpload.tsx
src/core/: search.ts  timeline.ts
src/features/ai/: api.ts
src/features/export/: api.ts
src/features/jobs/: api.ts
src/features/project/: api.ts
src/hooks/: useFFmpeg.ts  useTimeline.ts  useTranscript.ts  useVideoPlayer.ts
src/lib/: ai-media.ts  desktop-client.ts  embeddings.ts  ffmpeg.ts  gemini.ts  timeline.ts
src/shared/: dnd.ts
src/types/: index.ts
(+20 files in other folders)
