[package]
name = "vibecut-desktop"
version = "0.1.0"
description = "VibeCut Studio desktop shell"
authors = ["OpenAI Codex"]
edition = "2021"
build = "build.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1"
base64 = "0.22"
reqwest = { version = "0.12", features = ["json", "multipart", "rustls-tls"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tokio = { version = "1", features = ["time"] }
uuid = { version = "1", features = ["v4", "serde"] }

